--- a/pages/message/message.wxss
+++ b/pages/message/message.wxss
@@ -146,10 +146,62 @@
  top: 20rpx;
 }
 
+/* 下拉框 */
+.top-selecteddd{
+  width: 50%;/*下拉框的长度*/
+  display: flex;
+  float: right;
+  align-items: center;
+  justify-content: space-between;
+  border: 1px solid #ccc;
+  padding: 0 10rpx;
+  font-size: 20rpx;
+}
+/* 下拉内容 */
+.select_boxxx {
+  background-color: #fff;
+  padding: 0 15rpx; /*padding:  0 20rpx;内边距  带两个参数，表示上下都是0px，左右都是20px*/
+  width: 70%;/*下拉框内容的长度*/
+  float: right;
+  position: relative;
+  right: 0;
+  z-index: 1;
+  overflow: hidden;
+  text-align: left;
+  animation: myfirst 0.5s;
+  font-size: 10rpx;/*设置字体尺寸大小*/
+}
+.select_oneee {
+  padding-left: 20rpx;
+  width: 70%;
+  height: 50rpx;
+  position: relative;
+  line-height: 30rpx;
+  border-bottom: 1px solid #ccc;
+}
+/* 下拉过度效果 */
+@keyframes myfirst {
+  from {
+    height: 0rpx;
+  }
+  
+  to {
+    height: 100rpx;
+  }
+}
+/* 下拉图标 */
+.top-selecteddd image{
+ height:50rpx;
+ width:50rpx;
+ position: absolute;
+ right: 0rpx;
+ top: 20rpx;
+}
+
 
 /*省市区start*/
 page{
-  background: #F9F9F9
+  background: rgb(249, 249, 249)
 }
 .container{
   padding: 0;
@@ -233,5 +285,6 @@ page{
 .loginBtn { 
  width: 80%; 
  margin-top: 35px; 
+ background: rgba(47, 236, 9, 0.568);
 } 
 /*保存按钮end*/ 
